--- a/androidutils/build.gradle
+++ b/androidutils/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.jakewharton:butterknife:8.0.0'
     compile 'org.xutils:xutils:3.3.36'
-
+    compile 'com.android.support:design:23.4.0'
 }
